@@ -5,6 +5,7 @@ import com.yahoo.config.ConfigInstance;
 
 import javax.tools.*;
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -76,8 +77,8 @@ public class LazyConfigCompiler implements ConfigCompiler {
         private <BUILDER extends ConfigInstance.Builder> BUILDER loadBuilder(String builderClassUrl) {
             try {
                 Class<BUILDER> clazz = (Class<BUILDER>) classLoader.<BUILDER>loadClass(builderClassUrl);
-                return clazz.newInstance();
-            } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+                return clazz.getDeclaredConstructor().newInstance();
+            } catch (ReflectiveOperationException e) {
                 throw new RuntimeException("Error creating new instance of '" + builderClassUrl + "'", e);
             }
         }
